# llzk-lib

./: AGENTS.md  CHANGELOG.md
.github/workflows/: bump-llzk-rs.yml  ci-build-docs.yml  ci-check-nix.yml  ci-test.yml  clang-format.yaml  deploy-github-pages.yml  release.yml  update-docs-on-main.yml
backends/r1cs/lib/r1cs/Transforms/: CMakeLists.txt  R1CSLoweringPass.cpp  TransformationPassPipelines.cpp
changelogs/unreleased/: add-ram-dialect-flattening.yaml  add-templatebuilder-param-expr.yaml  array-len-dim-bounds.yaml  copilot__review-llzk-tblgen-tool-3.yaml  copilot__review-llzk-tblgen-tool.yaml  dani__fix-capi-ctor.yaml  felt-constant-value-accessor.yaml  fix__poly-member-read-access.yaml  iangneal__function_arg_name_attr.yaml  iangneal__interval-analysis-stability.yaml  iangneal__nondeterminism-fix.yaml  iangneal__verif-precondition-restrictions.yaml  issue-308-sparse-adapter-ci.yaml  main.yaml  r1cs-lowering-sign-fix.yaml  raghav__array-to-scalar-nondet.yaml  raghav__more-cast-canonicalize.yaml  reilabs__main.yaml  th__add_callop_api.yaml  th__auto_upgrade_version2.yaml  th__bugfix_unknown_callee.yaml  th__instantiate_wildcard.yaml  th__new_tests.yaml  th__pass_pipelines.yaml  th__poly_template.yaml  th__remove_old_simple_reachability.yaml  th__use_permissive_conversion.yaml
doc/doxygen/: 03_syntax.md  09_backend_dialects.md
include/: CMakeLists.txt
include/llzk-c/: Constants.h
include/llzk-c/Dialect/: Array.h  Function.h  Poly.h  RAM.h  Struct.h  Verif.h
include/llzk/Analysis/: AbstractLatticeValue.h  IntervalAnalysis.h  MemberOverwriteAnalysis.h  SourceRef.h  SourceRefLattice.h  SparseAnalysis.h  SymbolUseGraph.h
include/llzk/Dialect/Array/IR/: Types.td
include/llzk/Dialect/Array/Transforms/: TransformationPasses.h
include/llzk/Dialect/Cast/IR/: Ops.td
include/llzk/Dialect/Felt/IR/: Attrs.h  Attrs.td  Ops.td
include/llzk/Dialect/Function/IR/: Ops.h  Ops.td
include/llzk/Dialect/Include/Transforms/: InlineIncludesPass.h
include/llzk/Dialect/LLZK/IR/: Versioning.h
include/llzk/Dialect/POD/IR/: Ops.td  Types.td
include/llzk/Dialect/POD/Transforms/: TransformationPasses.h
include/llzk/Dialect/Polymorphic/IR/: CMakeLists.txt  OpInterfaces.td  Ops.h  Ops.td  Types.td
include/llzk/Dialect/Polymorphic/Transforms/: TransformationPasses.h  TransformationPasses.td
include/llzk/Dialect/RAM/IR/: CMakeLists.txt  Dialect.h  Dialect.td  Ops.h  Ops.td
include/llzk/Dialect/SMT/IR/: SMTAttributes.h  SMTDialect.h  SMTOps.h  SMTTypes.h  SMTVisitors.h
include/llzk/Dialect/Shared/: Builders.h  OpHelpers.h  TypeConversionPatterns.h
include/llzk/Dialect/Struct/IR/: Ops.h  Ops.td  Types.h  Types.td
include/llzk/Dialect/Struct/Transforms/: CMakeLists.txt  InlineStructsPass.h  TransformationPasses.h  TransformationPasses.td
include/llzk/Dialect/Verif/IR/: Ops.td
include/llzk/Dialect/Verif/Util/: ForbiddenPreconditionInfluence.h
include/llzk/Transforms/: LLZKConversionUtils.h  LLZKTransformationPassPipelines.h  LLZKTransformationPasses.h  LLZKTransformationPasses.td  Parsers.h
include/llzk/Util/: ErrorHelper.h  SymbolTableLLZK.h  Walk.h
include/llzk/Validators/: LLZKValidationPasses.h
lib/Analysis/: CMakeLists.txt  ConstraintDependencyGraph.cpp  IntervalAnalysis.cpp  Intervals.cpp  LightweightSignalEquivalenceAnalysis.cpp  SparseAnalysis.cpp  SymbolUseGraph.cpp
lib/CAPI/: Builder.cpp  CMakeLists.txt  Constants.cpp  Transforms.cpp
lib/CAPI/Dialect/: Array.cpp  Function.cpp  Include.cpp  POD.cpp  Poly.cpp  RAM.cpp  Struct.cpp  Verif.cpp
lib/Dialect/: CMakeLists.txt  InitDialects.cpp
lib/Dialect/Array/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/Array/Transforms/: ArrayToScalarPass.cpp
lib/Dialect/Array/Util/: ArrayTypeHelper.cpp
lib/Dialect/Cast/IR/: Ops.cpp
lib/Dialect/Felt/IR/: Attrs.cpp  Dialect.cpp  Ops.cpp
lib/Dialect/Function/IR/: Ops.cpp
lib/Dialect/Global/IR/: Ops.cpp
lib/Dialect/Polymorphic/: CMakeLists.txt
lib/Dialect/Polymorphic/IR/: Ops.cpp
lib/Dialect/Polymorphic/Transforms/: EmptyTemplateRemovalPass.cpp  FlatteningPass.cpp  SharedImpl.cpp  SharedImpl.h  WildcardArraySpecializationPass.cpp
lib/Dialect/RAM/: CMakeLists.txt
lib/Dialect/RAM/IR/: Dialect.cpp  Ops.cpp
lib/Dialect/SMT/: SMTAttributes.cpp  SMTDialect.cpp  SMTOps.cpp  SMTTypes.cpp
lib/Dialect/Shared/: Builders.cpp
lib/Dialect/Struct/: CMakeLists.txt
lib/Dialect/Struct/IR/: Dialect.cpp  Ops.cpp  Types.cpp
lib/Dialect/Struct/Transforms/: InlineStructsPass.cpp
lib/Dialect/Verif/IR/: Ops.cpp
lib/Dialect/Verif/Util/: ForbiddenPreconditionInfluence.cpp
lib/Transforms/: CMakeLists.txt  LLZKComputeConstrainToProductPass.cpp  LLZKFuseProductLoopsPass.cpp  LLZKInlineStructsPass.cpp  LLZKLoweringUtils.cpp  LLZKTransformationPassPipelines.cpp  LLZKUnusedDeclarationEliminationPass.cpp
lib/Util/: SymbolHelper.cpp  TypeHelper.cpp
nix/: llzk.nix
test/Analysis/: constraint_dependency_graph_pass.llzk  predecessor_analysis_pass.llzk  predecessor_analysis_prerun_pass.llzk  symbol_def_tree_pass.llzk  symbol_use_graph_pass.llzk
test/Analysis/interval_analysis/: edwards2montgomery.llzk  interval_analysis_pass.llzk
test/Conversions/: circom_isZero.llzk  zklean_isZero.llzk
test/Dialect/: symbol_table.llzk
test/Dialect/Array/: array_extract_pass.llzk  array_insert_pass.llzk  array_len_fail.llzk
test/Dialect/Bool/: asserts_fail.llzk  asserts_pass.llzk
test/Dialect/Cast/: canonicalize.llzk
test/Inputs/: bar.llzk  bits.llzk  header_11.llzk
test/Migration/: v1_syntax.llzk.bc  v1_syntax.llzk.txt  v1_syntax_check.llzk
tools/llzk-opt/: llzk-opt.cpp
tools/llzk-tblgen/: CommonAttrOrTypeCAPIGen.h  CommonCAPIGen.cpp  CommonCAPIGen.h  EnumCAPIGen.cpp  OpCAPIGen.cpp  OpCAPITestGen.cpp
unittests/Analysis/: CallGraphTests.cpp  IntervalTests.cpp  SparseAnalysisTests.cpp
unittests/CAPI/: CAPITestBase.h  Constants.cpp  Transforms.cpp
unittests/IR/: BuildersTests.cpp  CallOpTests.cpp  FunctionDialectTests.cpp  OpTestBase.h  VerifDialectTests.cpp
unittests/Util/: ArrayTypeHelperTest.cpp  ForbiddenPreconditionInfluence.cpp
(+118 files in other folders)
